Module 01 ex03 done

--- a/Module_01/ex00/Makefile
+++ b/Module_01/ex00/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: nnabaeei <nnabaeei@student.42heilbronn.    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/04/27 09:29:51 by nnabaeei          #+#    #+#              #
+#    Updated: 2024/04/27 09:29:53 by nnabaeei         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME     := BraiiiiiiinnnzzzZ
 CXX      := g++
 CXXFLAGS := -Wall -Wextra -Werror -std=c++98 -g
