--- a/Module_01/ex02/Makefile
+++ b/Module_01/ex02/Makefile
@@ -1,3 +1,16 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: nnabaeei <nnabaeei@student.42heilbronn.    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/04/27 09:27:14 by nnabaeei          #+#    #+#              #
+#    Updated: 2024/04/27 09:27:20 by nnabaeei         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
+
 NAME     := HI_THIS_IS_BRAIN
 CXX      := g++
 CXXFLAGS := -Wall -Wextra -Werror -std=c++98 -g
