Module02 ex00 done

--- a/Module_00/ex00/Makefile
+++ b/Module_00/ex00/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: nnabaeei <nnabaeei@student.42heilbronn.    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/04/27 09:27:42 by nnabaeei          #+#    #+#              #
+#    Updated: 2024/04/27 09:27:45 by nnabaeei         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 CC 			= g++  #-fsanitize=thread #-fno-omit-frame-pointer
 FLAGS		= -Wall -Wextra -Werror -std=c++98 -g
 
