--- a/Module_02/ex00/Makefile
+++ b/Module_02/ex00/Makefile
@@ -5,33 +5,40 @@
 #                                                     +:+ +:+         +:+      #
 #    By: nnabaeei <nnabaeei@student.42heilbronn.    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/04/27 09:28:38 by nnabaeei          #+#    #+#              #
-#    Updated: 2024/04/27 09:28:40 by nnabaeei         ###   ########.fr        #
+#    Created: 2024/04/27 09:27:14 by nnabaeei          #+#    #+#              #
+#    Updated: 2024/05/04 00:25:40 by nnabaeei         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME     := PhoneBook
+NAME     := Orthodox_Canonical_Form
 CXX      := g++
 CXXFLAGS := -Wall -Wextra -Werror -std=c++98 -g
 CXXFLAGS += -fsanitize=address
 
-CPP_FILES := main.cpp Contact.cpp PhoneBook.cpp
-HEADERS   := Contact.hpp PhoneBook.hpp
-
+# Directories
+SRC_DIR := src
+INCLUDE_DIR := include
 OBJ_DIR := obj
 
+# Find all .cpp files in the SRC directory
+CPP_FILES := $(wildcard $(SRC_DIR)/*.cpp)
+
+# Find all .hpp files in the INCLUDE directory
+HEADERS := $(wildcard $(INCLUDE_DIR)/*.hpp)
+
+# Generate object file names
 OBJ_FILES := $(addprefix $(OBJ_DIR)/,$(notdir $(CPP_FILES:.cpp=.o)))
 
 all: $(NAME)
 
-
-$(OBJ_DIR)/%.o: %.cpp $(HEADERS)
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp $(HEADERS)
 	@mkdir -p $(@D)
-	@$(CXX) $(CXXFLAGS) -c $< -o $@
+	@$(CXX)  -c -o $@ $< $(CXXFLAGS) -I$(INCLUDE_DIR)
 
 $(NAME): $(OBJ_FILES)
 	@$(CXX) $(CXXFLAGS) $(OBJ_FILES) -o $(NAME) $(LDFLAGS)
-	@echo "\033[38;5;214m-----executable file has been created!-----"
+	@echo $(ORG)----- $(RESET)$(GREEN)$(NAME)$(RESET)$(ORG) as exe file is created!-----$(RESET)
+
 clean:
 	@rm -rf $(OBJ_DIR)
 
@@ -41,3 +48,9 @@ fclean: clean
 re: clean all
 
 .PHONY: all, clean, fclean, re
+
+BLUE	= "\033[38;5;4m"
+GREEN	= "\033[38;5;2m"
+ORG		= "\033[38;5;214m"
+RED		= "\033[38;5;196m"
+RESET	= "\033[0m"
