optimizing some Modules

--- a/Module_03/ex01/Makefile
+++ b/Module_03/ex01/Makefile
@@ -6,11 +6,11 @@
 #    By: nnabaeei <nnabaeei@student.42heilbronn.    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/27 09:27:14 by nnabaeei          #+#    #+#              #
-#    Updated: 2024/05/14 21:41:41 by nnabaeei         ###   ########.fr        #
+#    Updated: 2024/05/15 10:26:04 by nnabaeei         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME     := serena
+NAME     := ScavTrap
 CXX      := g++
 CXXFLAGS := -Wall -Wextra -Werror -std=c++98 -g
 CXXFLAGS += -fsanitize=address
