Module06 ex01 done

--- a/Module_06/ex01/Makefile
+++ b/Module_06/ex01/Makefile
@@ -3,14 +3,14 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: nnabaeei <nnabaeei@student.42heilbronn.    +#+  +:+       +#+         #
+#    By: nnavidd <nnavidd@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/27 09:27:14 by nnabaeei          #+#    #+#              #
-#    Updated: 2024/06/16 23:26:49 by nnabaeei         ###   ########.fr        #
+#    Updated: 2024/06/18 00:45:09 by nnavidd          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME     := convert
+NAME     := serialization
 CXX      := g++
 CXXFLAGS := -Wall -Wextra -Werror -std=c++98 -g
 CXXFLAGS += -fsanitize=address -Wshadow -Wno-shadow
