optimizing Module09 ex00, ex01, and ex02

--- a/Module_09/ex00/Makefile
+++ b/Module_09/ex00/Makefile
@@ -6,12 +6,12 @@
 #    By: nnavidd <nnavidd@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/27 09:27:14 by nnabaeei          #+#    #+#              #
-#    Updated: 2025/01/13 22:53:19 by nnavidd          ###   ########.fr        #
+#    Updated: 2025/01/14 12:41:30 by nnavidd          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME     := bts
-CXX      := g++
+CXX      := c++
 CXXFLAGS := -Wall -Wextra -Werror -std=c++98 -g
 CXXFLAGS += -fsanitize=address -Wshadow -Wno-shadow
 
