Fix: Fix the isValidDate() in Module_09 ex00.

--- a/Module_09/ex00/Makefile
+++ b/Module_09/ex00/Makefile
@@ -3,16 +3,16 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: nnavidd <nnavidd@student.42.fr>            +#+  +:+       +#+         #
+#    By: nnabaeei <nnabaeei@student.42heilbronn.    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/27 09:27:14 by nnabaeei          #+#    #+#              #
-#    Updated: 2025/01/14 12:41:30 by nnavidd          ###   ########.fr        #
+#    Updated: 2025/05/10 17:57:51 by nnabaeei         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME     := bts
 CXX      := c++
-CXXFLAGS := -Wall -Wextra -Werror -std=c++98 -g
+CXXFLAGS := -Wall -Wextra -Werror -std=c++17 -g
 CXXFLAGS += -fsanitize=address -Wshadow -Wno-shadow
 
 # Directories
